# td

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  FAQ  INSTALL  NEWS  README  TODO  td.cbp
blender/objectcube/: objectcube.blend  objectcube.mesh.xml  objectcube.xcf
blender/objectkernel/: objectkernel.blend  objectkernel.mesh.xml  objectkernel.xcf
cmake_in/: Doxyfile.in  config.h.in  config.xml.in  user.xml.in
cmake_in/config/: config.h.in  main.cfg.in  plugins.cfg.in
config/: config.h.in  resources.cfg.in
doc/: diagram.odg  events_handlers.odg
docs/: events_handlers.odg
include/: main.h
include/app/: CGame.h
include/object/: CMove.h  CObject.h
include/physics/: BtOgreExtras.h  BtOgreGP.h  BtOgrePG.h
include/user/: CControl.h  CControlled.h  CInputEvent.h  CInputHandler.h  CUser.h
include/world/: CGravityField.h  CObjectCube.h  CObjectKernel.h  CObjectWorld.h
lib/OgreDebugDrawer/: DebugDrawer.cpp  DebugDrawer.h
lib/btogre/: BtOgre.cpp  BtOgreGP.h  BtOgrePG.h
lib/fd/: fd.h  fdbind.h
lib/pugixml/: foreach.hpp  pugixml.cpp  pugixml.hpp
locale/: main.pot  ru.po
share/data/graph/meshes/: objectkernel.mesh
share/data/graph/textures/: objectkernel.material
share/data/graphic/materials/: objectcube.material
share/data/graphic/meshes/: objectcube.mesh
share/data/objects/: objectCamera.xml.in  objectCube.xml.in  objectEnergy.xml.in  objectEngine.xml.in  objectKernel.xml.in  objectLight.xml.in  objectMicrophone.xml.in  objectPlatform.xml.in  objectRadar.xml.in  objectRadio.xml.in  objectShield.xml.in  objectSpeaker.xml.in  objectWeapon.xml.in  objectWheel.xml.in
share/data/objects/types/: typeCamera.xml.in  typeControl.xml.in  typeEnergy.xml.in  typeEngine.xml.in  typeLight.xml.in  typeMicrophone.xml.in  typeRadar.xml.in  typeRadio.xml.in  typeShield.xml.in  typeSpace.xml.in  typeSpeaker.xml.in  typeWaveEmitter.xml.in  typeWaveReciever.xml.in  typeWeapon.xml.in
share/data/scripts/config/: screen.ini
src/: CAction.cpp  CAction.h  CControl.cpp  CControl.h  CControlled.cpp  CControlled.h  CData.cpp  CData.h  CEye.cpp  CEye.h  CGame.cpp  CGame.h  CGravityField.cpp  CGravityField.h  CInputEvent.cpp  CInputEvent.h  CInputHandler.cpp  CInputHandler.h  CMaster.cpp  CMaster.h  CMove.cpp  CMove.h  CObject.cpp  CObject.h  CObjectCube.cpp  CObjectCube.h  CObjectKernel.cpp  CObjectKernel.h  CObjectWorld.cpp  CObjectWorld.h  CPreferences.cpp  CPreferences.h  CUser.cpp  CUser.h  CWorld.cpp  CWorld.h  Common.cpp  Common.h  main.cpp  main.h
src/Nerv/: CAction.cpp  CAction.h  CControlled.cpp  CControlled.h  CSensor.cpp  CSensor.h  CSignal.cpp  CSignal.h  CSynaps.cpp  CSynaps.h
src/World/: CObject.cpp  CObject.h  CObjectCube.cpp  CObjectCube.h  CObjectKernel.cpp  CObjectKernel.h  CWorld.cpp  CWorld.h
src/World/Types/: CType.cpp  CType.h  CTypeCamera.cpp  CTypeCamera.h  CTypeControl.cpp  CTypeControl.h  CTypeEnergy.cpp  CTypeEnergy.h  CTypeEngine.cpp  CTypeEngine.h  CTypeRadar.cpp  CTypeRadar.h  CTypeShield.cpp  CTypeShield.h  CTypeSpace.cpp  CTypeSpace.h  CTypeWaveEmitter.cpp  CTypeWaveEmitter.h  CTypeWaveReciever.cpp  CTypeWaveReciever.h  CTypeWeapon.cpp  CTypeWeapon.h
src/app/: CGame.cpp
src/object/: CMove.cpp  CObject.cpp
src/physics/: BtOgre.cpp
src/user/: CControl.cpp  CControlled.cpp  CInputEvent.cpp  CInputHandler.cpp  CUser.cpp
src/world/: CGravityField.cpp  CObjectCube.cpp  CObjectKernel.cpp  CObjectWorld.cpp
